# Cellular-Automata-Game-Of-Life

./: .gitignore  CMakeLists.txt  README.md  cell.cpp  cell.h  conanfile.txt  main.cpp
